--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -99,3 +99,4 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/KOTY.TurtleItem.ApplyVelocity",NewName="/Script/KOTY.TurtleItem.UpdateLocation")
 +FunctionRedirects=(OldName="/Script/KOTY.TurtleItem.ApplyStep",NewName="/Script/KOTY.TurtleItem.ApplyBounce")
 +FunctionRedirects=(OldName="/Script/KOTY.TurtleItem.AdjustVelocity",NewName="/Script/KOTY.TurtleItem.AdjustVelocityToHorizon")
++FunctionRedirects=(OldName="/Script/KOTY.KotyMovementComponent.GetSurfaceNormalAroundActor",NewName="/Script/KOTY.KotyMovementComponent.FindTrackSurface")
