2025-08-08 : KotyMovementComponent 거의 해결?

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -100,3 +100,4 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/KOTY.TurtleItem.ApplyStep",NewName="/Script/KOTY.TurtleItem.ApplyBounce")
 +FunctionRedirects=(OldName="/Script/KOTY.TurtleItem.AdjustVelocity",NewName="/Script/KOTY.TurtleItem.AdjustVelocityToHorizon")
 +FunctionRedirects=(OldName="/Script/KOTY.KotyMovementComponent.GetSurfaceNormalAroundActor",NewName="/Script/KOTY.KotyMovementComponent.FindTrackSurface")
++PropertyRedirects=(OldName="/Script/KOTY.KotyMovementComponent.StepUpH2eight",NewName="/Script/KOTY.KotyMovementComponent.StepUpLimit")
