2025-08-22 : 아이템 C++로 리팩토링

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -104,3 +104,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/KOTY.C_KartBase.BoostSpeed",NewName="/Script/KOTY.C_KartBase.AddSpeed")
 +PropertyRedirects=(OldName="/Script/KOTY.C_PlayerKart.BoostAction",NewName="/Script/KOTY.C_PlayerKart.AddSpeedAction")
 +PropertyRedirects=(OldName="/Script/KOTY.C_KartBase.DriftEffect",NewName="/Script/KOTY.C_KartBase.DriftEffect1")
++FunctionRedirects=(OldName="/Script/KOTY.BlackBombItem.TimelineFinishedFunction",NewName="/Script/KOTY.BlackBombItem.TimelineUpdateFunction")
++FunctionRedirects=(OldName="/Script/KOTY.BlackBombItem.TimelineUpdateFunction",NewName="/Script/KOTY.BlackBombItem.TimelinePostUpdateFunction")
++FunctionRedirects=(OldName="/Script/KOTY.BlackBombItem.TimelinePostUpdateFunction",NewName="/Script/KOTY.BlackBombItem.SetElasedTime")
++FunctionRedirects=(OldName="/Script/KOTY.BlackBombItem.SetElasedTime",NewName="/Script/KOTY.BlackBombItem.SetElapsedTime")
