2025-08-24 : 아이템 전반을 C++로 리팩토링했으며 추적 및 충돌 감지를 위한 KotyItemHitComponent를 완전함

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -108,3 +108,6 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/KOTY.BlackBombItem.TimelineUpdateFunction",NewName="/Script/KOTY.BlackBombItem.TimelinePostUpdateFunction")
 +FunctionRedirects=(OldName="/Script/KOTY.BlackBombItem.TimelinePostUpdateFunction",NewName="/Script/KOTY.BlackBombItem.SetElasedTime")
 +FunctionRedirects=(OldName="/Script/KOTY.BlackBombItem.SetElasedTime",NewName="/Script/KOTY.BlackBombItem.SetElapsedTime")
++PropertyRedirects=(OldName="/Script/KOTY.BlackBombItem.TimerHandle",NewName="/Script/KOTY.BlackBombItem.ExplosionTimerHandle")
++FunctionRedirects=(OldName="/Script/KOTY.BlackBombExplosion.UpdateExplosion",NewName="/Script/KOTY.BlackBombExplosion.UpdateExplosionAlpha")
++FunctionRedirects=(OldName="/Script/KOTY.KotyItemHitComponent.ApplyEffectFromItem",NewName="/Script/KOTY.KotyItemHitComponent.OnRequestApplyEffectFromItem")
