8월 25일 발표직전(ai 브레이크 구현)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Koty/Level/NewMap.NewMap
-EditorStartupMap=/Game/Koty/Level/NewMap.NewMap
+EditorStartupMap=/Game/AI_Player/TestLevel/TestTrack.TestTrack
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
@@ -104,3 +104,4 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/KOTY.C_KartBase.BoostSpeed",NewName="/Script/KOTY.C_KartBase.AddSpeed")
 +PropertyRedirects=(OldName="/Script/KOTY.C_PlayerKart.BoostAction",NewName="/Script/KOTY.C_PlayerKart.AddSpeedAction")
 +PropertyRedirects=(OldName="/Script/KOTY.C_KartBase.DriftEffect",NewName="/Script/KOTY.C_KartBase.DriftEffect1")
+
