2025-08-25 AI merge, default setting

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Koty/Level/NewMap.NewMap
-EditorStartupMap=/Game/AI_Player/TestLevel/TestTrack.TestTrack
+GameDefaultMap=/Game/Koty/Level/MenuLevel.MenuLevel
+EditorStartupMap=/Game/Koty/Level/MenuLevel.MenuLevel
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
