2025-08-26 : 새로운 아이템 C++ 클래스 추가 및 리팩토링 작업

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -116,3 +116,16 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/KOTY.ItemBox.MeshComp",NewName="/Script/KOTY.ItemBox.BoxMeshComp")
 +ClassRedirects=(OldName="/Script/KOTY.MyClass",NewName="/Script/KOTY.ItemBox")
 +PropertyRedirects=(OldName="/Script/KOTY.ItemBox.UseSound",NewName="/Script/KOTY.ItemBox.SelectSound")
++ClassRedirects=(OldName="/Script/KOTY.KotyBanana",NewName="/Script/KOTY.BananaItem")
++ClassRedirects=(OldName="/Script/KOTY.KotyCoin",NewName="/Script/KOTY.CoinItem")
++ClassRedirects=(OldName="/Script/KOTY.KotyMushroom",NewName="/Script/KOTY.SmallMushroomItem")
++ClassRedirects=(OldName="/Script/KOTY.KotySquid",NewName="/Script/KOTY.SquidItem")
++ClassRedirects=(OldName="/Script/KOTY.KotyStar",NewName="/Script/KOTY.StarItem")
++PropertyRedirects=(OldName="/Script/KOTY.Squid.StaticMeshComponent",NewName="/Script/KOTY.SquidItem.MeshComp")
++ClassRedirects=(OldName="/Script/KOTY.Star",NewName="/Script/KOTY.StarItem")
++ClassRedirects=(OldName="/Script/KOTY.Squid",NewName="/Script/KOTY.SquidItem")
++ClassRedirects=(OldName="/Script/KOTY.Mushroom",NewName="/Script/KOTY.SmallMushroomItem")
++ClassRedirects=(OldName="/Script/KOTY.Coin",NewName="/Script/KOTY.CoinItem")
++ClassRedirects=(OldName="/Script/KOTY.Banana",NewName="/Script/KOTY.BananaItem")
++ClassRedirects=(OldName="/Script/KOTY.MushroomItem",NewName="/Script/KOTY.SmallMushroomItem")
++ClassRedirects=(OldName="/Script/KOTY.MyClass",NewName="/Script/KOTY.BigMushroomItem")
