--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -104,4 +104,12 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/KOTY.C_KartBase.BoostSpeed",NewName="/Script/KOTY.C_KartBase.AddSpeed")
 +PropertyRedirects=(OldName="/Script/KOTY.C_PlayerKart.BoostAction",NewName="/Script/KOTY.C_PlayerKart.AddSpeedAction")
 +PropertyRedirects=(OldName="/Script/KOTY.C_KartBase.DriftEffect",NewName="/Script/KOTY.C_KartBase.DriftEffect1")
++PropertyRedirects=(OldName="/Script/KOTY.KotyItemHoldComponent.GetBananaItemClass",NewName="/Script/KOTY.KotyItemHoldComponent.RedTurtleItemClass")
++EnumRedirects=(OldName="/Script/KOTY.EItem",NewName="/Script/KOTY.EItemList")
++FunctionRedirects=(OldName="/Script/KOTY.KotyItemHoldComponent.ThrowCurrentItem",NewName="/Script/KOTY.KotyItemHoldComponent.UseCurrentItem")
++FunctionRedirects=(OldName="/Script/KOTY.KotyItemHoldComponent.LoseCurrentItem",NewName="/Script/KOTY.KotyItemHoldComponent.LoseItems")
++FunctionRedirects=(OldName="/Script/KOTY.KotyItemHoldComponent.LoseItems",NewName="/Script/KOTY.KotyItemHoldComponent.LoseHoldingItems")
++FunctionRedirects=(OldName="/Script/KOTY.KotyItemHoldComponent.SpawnItem",NewName="/Script/KOTY.KotyItemHoldComponent.SpawnItemByCode")
++FunctionRedirects=(OldName="/Script/KOTY.KotyItemHoldComponent.RotateAround",NewName="/Script/KOTY.KotyItemHoldComponent.StartRotatingAround")
++FunctionRedirects=(OldName="/Script/KOTY.KotyItemHoldComponent.GetNewItem",NewName="/Script/KOTY.KotyItemHoldComponent.GetRandomItem")
 
