--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -112,4 +112,6 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/KOTY.KotyItemHoldComponent.SpawnItem",NewName="/Script/KOTY.KotyItemHoldComponent.SpawnItemByCode")
 +FunctionRedirects=(OldName="/Script/KOTY.KotyItemHoldComponent.RotateAround",NewName="/Script/KOTY.KotyItemHoldComponent.StartRotatingAround")
 +FunctionRedirects=(OldName="/Script/KOTY.KotyItemHoldComponent.GetNewItem",NewName="/Script/KOTY.KotyItemHoldComponent.GetRandomItem")
++ClassRedirects=(OldName="/Script/KOTY.SmallMushroomItem",NewName="/Script/KOTY.MushroomSmallItem")
++ClassRedirects=(OldName="/Script/KOTY.BigMushroomItem",NewName="/Script/KOTY.MushroomBigItem")
 
