08-29 9시 7분 집가기전 merge

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Koty/Level/MenuLevel.MenuLevel
-EditorStartupMap=/Game/Koty/Level/MenuLevel.MenuLevel
+GameDefaultMap=/Game/AI_Player/TestLevel/TestTrack.TestTrack
+EditorStartupMap=/Game/AI_Player/TestLevel/TestTrack.TestTrack
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
